# Life_Assistant

./: .gitignore  Dockerfile  README.md  StructureRecommend.md  bot.py  config.py  example.env  execstack.deb  keep_alive.py  pyproject.toml  render.yaml  requirements.txt  sync.ps1
alembic/: env.py
alembic/versions/: 02f8c0261ace_einvoiceconfig.py  3cc773becd2b_customtimev3.py  4734b0dd221b_gmail_category.py  669100e60e67_customtimev2.py  6d6bf51db7e4_lifetracker_v3.py  6e99c9e5dd2d_customtime.py  7bb06f98bce7_lifetracker_v2.py  8d4fbd102b78_remove_priority_from_calendar.py  8f51fc731b96_lifetracker.py  bf60695e7f5b_weeklyreport.py  ce806bba0263_customtime.py  dffd3d950ba3_add_active.py  e8963cff7919_add_mem.py  ec72a480a8cb_initial_tables.py  ecdecafe5eb4_server_setting.py  fe3f26b43b98_einvoice_datetocatch.py
cogs/: Base.py  BasicDiscordObject.py  Fortune.py  HelloBack.py  Reply.py  example.py
cogs/GPT/: Suspend__init__.py  __init__.py
cogs/Gmail/: Gmail_cog.py  Gmail_config.py  __init__.py  email_list.json  gmail.py  gmail_cog.py  gmail_config.py
cogs/Itinerary/: __init__.py  itinerary.json  itinerary.py  itinerary_cog.py  itinerary_config.py
cogs/LifeTracker/: LifeTrackerTasks.py  LifeTracker_config.py  __init__.py  dashboard.py
cogs/Stock/: __init__.py  stock_cog.py  stock_config.py  stock_ui.py
cogs/Suspend_THSR/: README.md  __init__.py  dashboard.py  task.py
cogs/System/: README.md  System_cog.py  __init__.py  core.py  (+2 more)
database/: __init__.py  calendar_manager.py  db.py  db_utils.py  gmail_manager.py  models.py  reset_db.py
views/: __init__.py
(+210 files in other folders)
